<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Blackmoon File Browser</string>
<string name="app_desc">Browse the files and folders on your phone.</string>
<string name="portmortem_report_emailmsg">Please help by sending this email. No personal information is being sent (you can check by reading the rest of the email).</string>
<string name="list_empty">(nothing found)</string>
<string name="button_pickfiles">Pick marked files</string>
<string name="button_pickfile">Pick marked file</string>
<string name="button_pickfolder">Pick Current Folder</string>
<string name="action_failed">Action Failed</string>
<string name="permission_denied">Permission denied!</string>
<string name="file_info_fmtstr">%1$s, %2$tF %3$tR</string>
<string name="folder_info_fmtstr">%1$tF %2$tR</string>
<string name="menu_item_refreshcard">Refresh SD card</string>
<string name="menu_item_open">Open</string>
<string name="menu_item_openwith">Open With…</string>
<string name="menu_item_rename">Rename</string>
<string name="menu_item_delete">Delete</string>
<string name="menu_item_sendto">Send To…</string>
<string name="menu_item_openas">Open As…</string>
<string name="menu_item_audio_menu">Make Available To…</string>
<string name="menu_item_audio_ringtone">Ringtones</string>
<string name="menu_item_audio_notification">Notifications</string>
<string name="menu_item_audio_alarm">Alarms</string>
<string name="menu_item_mark">Mark</string>
<string name="menu_item_unmark">Unmark</string>
<string name="menu_item_mark_all">Mark All</string>
<string name="menu_item_markactions">Mark Actions</string>
<string name="menu_item_copy_marked">Copy Marked Here</string>
<string name="menu_item_move_marked">Move Marked Here</string>
<string name="menu_item_copy_marked_to">Copy Marked To…</string>
<string name="menu_item_move_marked_to">Move Marked To…</string>
<string name="menu_item_delete_marked">Delete Marked</string>
<string name="menu_item_cancel_marked">Cancel All Marks</string>
<string name="menu_item_new_folder">New Folder</string>
<string name="menu_item_markstart">Start Marking</string>
<string name="menu_item_markstop">Stop Marking</string>
<string name="menu_item_folderactions">Actions</string>
<string name="menu_item_send_marked">Send Marked To…</string>
<string name="menu_item_pick_this_folder">Pick this folder</string>
<string name="menu_item_pick_this_file">Pick this file</string>
<string name="menu_item_pick_this_item">Pick this</string>
<string name="menu_item_edit">Edit</string>
<string name="menu_item_reset_prefs">Reset Settings</string>
<string name="menu_item_more">More</string>
<string name="menu_item_exit">Exit</string>
<string name="menu_item_add_jumppoint">Create Jump Point</string>
<string name="menu_item_jumpto">Jump To…</string>
<string name="menu_item_open_symlink">Open §</string>
<string name="dialog_confirm_delete_title">Confirm Delete</string>
<string name="dialog_confirm_delete_text">Permanently delete %1$s?</string>
<string name="msg_busy">Busy! Please wait…</string>
<string name="dialog_rename_title">New Name</string>
<string name="default_name_folder">folder</string>
<string name="marked_copying">Copying</string>
<string name="marked_moving">Moving</string>
<string name="marked_deleting">Deleting</string>
<string name="samefilename_copy_prefix">copy-</string>
<string name="samefilename_folder_to_file_prefix">file-</string>
<string name="msg_delete_folder">The folder is not empty. &quot;Mark&quot; the folder and use &quot;Delete Marked&quot; in order to remove a non-empty folder. (safety precaution against miss-clicks)</string>
<string name="act_name_settings">Settings</string>
<string name="act_name_playlist">Create Playlist</string>
<string name="playlist_foldername">playlists</string>
<string name="action_failed_no_sdcard">SD card not found!</string>
<string name="default_name_playlist">Playlist-</string>
<string name="msg_cancelled">Cancelled</string>
<string name="action_failed_refresh_card">Action failed, please refresh the SD card and try again.</string>
<string name="act_name_fileshortcut">File</string>
<string name="act_name_zippack">Pack (Zip)</string>
<string name="act_name_zipunpack">Unpack (unZip)</string>
<string name="act_name_saveto">Save To…</string>
<string name="title_selectfolder">Please select a folder</string>
<string name="title_selectfile">Please select a file</string>
<string name="name_jump_sdcard">SD Card</string>
<string name="prefscat_appearance">Appearance</string>
<string name="prefscat_behavior">Behavior</string>
<string name="prefscat_plugins">Plugins</string>
<string name="prefscat_sort">Sort</string>
<string name="pref_summary_plugin">Settings for this plugin</string>
<string name="pref_title_show_unreadable">Show Unreadables</string>
<string name="pref_summary_show_unreadable">Show files and folders that cannot be opened</string>
<string name="pref_title_show_hidden">Show Hidden</string>
<string name="pref_summary_show_hidden">Show hidden files and folders</string>
<string name="pref_title_show_thumbnails">Show Thumbnails</string>
<string name="pref_summary_show_thumbnails">Show image thumbnails</string>
<string name="pref_title_backkey_exits">BACK exits app</string>
<string name="pref_summary_backkey_exits">Back key will exit app immediately</string>
<string name="pref_title_thumbnail_size">Thumbnail Size</string>
<string name="pref_dialog_title_thumbnail_size">Select Thumbnail Size</string>
<string name="pref_title_sort_order">Sort Order</string>
<string name="pref_dialog_title_sort_order">Sort</string>
<string name="pref_title_sort_reversed">Reverse Sort</string>
<string name="pref_summary_sort_reversed">Reverse the normal sort order</string>
<string name="pref_title_orientation">Orientation</string>
<string name="pref_dialog_title_orientation">Select Orientation</string>
<string name="pref_title_font_size">Font Size</string>
<string name="pref_dialog_title_font_size">Select Font Size</string>
<string name="pref_title_send_clears_marked">Send Clears Marks</string>
<string name="pref_summary_send_clears_marked">Uncheck to remember marked files after using \"Send Marked To…\"</string>
<!-- 6.0 -->
<string name="pref_title_use_recyclebin">Recycle all deletes</string>
<string name="pref_summary_use_recyclebin">Send all deleted files to the recycle bin</string>
<string name="dialog_confirm_delete_recyclebin">Permanently delete all files in the recycle bin?</string>
<!-- Search related -->
<string name="act_name_search">Search Results</string>
<string name="search_hint">Search SD card</string><!-- Background text that appears inside the Search Box (needs to be short) -->
<string name="search_desc">Search my SD card</string><!-- Text that appears in the Search System Setting -->
<string name="menu_item_search">Search</string>
<string name="menu_item_search_tips">Special Search Tips</string>
<string name="prefscat_search">Search</string>
<string name="pref_title_search_global_settings">Show Device Settings</string>
<string name="pref_summary_search_global_settings">Lets you change your global searches to include this app or not</string>
<string name="search_tip_intro">Special search terms are available in order to create more advanced searches. All of them may be mixed with words in a normal search.</string>
<string name="search_tip_filename">If you place an exclamation point at the beginning of a word, files that contain the word will be excluded. For example, %1$s will return all files that &lt;i&gt;do not&lt;/i&gt; have %2$s in the filename.</string>
<string name="search_tip_filedate">or %1$s will search the age of the file. The # represents the number of days old. For example, %2$s will find all files and folders created or modified less than 7 days ago.</string>
<string name="search_tip_filesize">or %1$s will search the size of the file. K can be substituted with M, G, or T to mean larger sizes. For example, %2$s will find all files less than 1 megabyte in size.</string>
<string name="search_tip_filetype">will not only search file extensions, but also MIME types. For example, %1$s will find all music file types in addition to any files with the extension %2$s. If you want to use the NOT operator, put \&quot;!\&quot; after the initial period.</string>
<string name="search_tip_duplicates">will find all duplicated filenames. For example, \"file-2.mp3\" would be found if \"file.mp3\" or \"file-1.mp3\" also existed in the same folder. %1$s will list \"file.mp3\" as well as any duplicated files. If you mix it with other terms, place this one last for optimal search speed.</string>
<string name="search_tip_regex">A term can also be a PHP-style regex expression. \"i\" is the only supported optional pattern modifier.</string>
<!-- 7.0 -->
<string name="menu_item_viewtype_list">List View</string>
<string name="menu_item_viewtype_grid">Grid View</string>
<!-- 7.8 -->
<string name="pref_title_hide_notificationbar">Use Full Screen</string>
<string name="pref_summary_hide_notificationbar">Hide the Notification Bar</string>
<string name="desc_file_marked">marked</string><!-- spoken for the visually impaired -->
<string name="desc_goto_parent">up</string><!-- spoken for the visually impaired -->

</resources>
